--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "npm run lint && npm run test && node ./bin/www",
-    "test": "node test/coverage.js",
+    "test": "node test/routes.js",
     "lint": "jshint ./configs ./routes ./test app.js"
   },
   "dependencies": {
